--- a/app.json
+++ b/app.json
@@ -14,6 +14,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "notification": {
+      "icon": "./assets/icon.png.png"
+    },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
@@ -21,7 +24,11 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "org.fitness.exp"
+    }
+    "android": {
+      "package": "org.fitness.exp"
     }
   }
 }
